src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
	scroll-behavior: smooth;
}

* {
	font-family: 'Roboto', sans-serif;
}

h1,
h2,
h3,
.poppins {
	font-family: 'Poppins', sans-serif;
}

h2 {
  font-size: 1.25rem;
}

.violetShadow {
	box-shadow: 0px 14px 55px rgba(109, 40, 217, 0.45);
}

.specialSpin {
	animation: spin 5s linear infinite;
}

::-webkit-scrollbar {
  display: none
}

@keyframes spin {
	from {
		transform: rotate(0deg);
	}

	to {
		transform: rotate(360deg);
	}
}

.blur-load {
	background-size: cover;
	background-position: center;
}

.img {
	object-position: center;
	object-fit: cover;
}

#particles-js{
  width: 100%;
  height: 100%;
  position: fixed;
  background-color: #000;
  background-image: url('');
  background-size: cover;
  background-position: 50% 50%;
  background-repeat: no-repeat;
}

.body-particles{
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  z-index: 100;
}

